添加皮肤库插件，完善&修复岛屿插件